--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for App-UniqFiles
 
+0.04    2011-07-28
+
+        [ENHANCEMENTS]
+
+        Add option: check_content.
+
+
 0.03    2011-07-28
 
         Fix behaviour to match `uniq` command: by default, duplicate files are
