--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for App-UniqFiles
 
+0.07     2014-07-22 (SHARYANTO)
+
+         - No functional changes.
+
+         - Switch CLI scripts from using Perinci::CmdLine to
+           Perinci::CmdLine::Any to reduce size of dependencies.
+
+
 0.06    2014-05-16 (SHARYANTO)
 
         - No functional changes.
