--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.130   2019-12-04  Released-By: PERLANCAR; Urgency: medium
+
+	- [doc] Mention find-duplicate-filenames.
+
+
 0.12    2017-07-10  Released-By: PERLANCAR
 
 	- No functional changes.
