--- a/Changes
+++ b/Changes
@@ -35,7 +35,7 @@
 	- Rebuild (Generate TODO.md).
 
 
-0.08     2014-08-16 (SHARYANTO) - Happy 19th CPAN Day!
+0.08     2014-08-16  Released-By: SHARYANTO; Note: Happy 19th CPAN Day!
 
          - [build] CLI scripts are now generated automatically using
            Dist::Zilla::Plugin::ScriptFromFunc. The plugin is still at 0.01 so the
@@ -85,3 +85,4 @@
 0.01    2011-07-28  Released-By: SHARYANTO
 
         - First release.
+
