--- a/Changes
+++ b/Changes
@@ -1,3 +1,29 @@
+0.131   2020-05-28  Released-By: PERLANCAR; Urgency: medium
+
+	- Support multiple digest algorithms (--algorithm, --digest-args (-A)).
+
+	- [removed] Remove --check-content option, replace it with --algorithm none.
+
+        - Support recursing into subdirectories (--recurse, -R).
+
+	- Add option --show-size, --show-digest, --group-by-digest.
+
+	- [doc] Mention App::DuplicateFilesUtils and move-duplicate-files-to.
+
+	- [ux] Simplify CLI: skip reading env & config files.
+
+	- Add option -D (--report-duplicate 3).
+
+	- [ux] Add shortcut alias option -a (for showing all files, equivalent
+	  to --report-unique --report-duplicate=1).
+
+	- [ux] Add -c as shortcut for --count.
+
+	- Make --count (-c) respect the --report-unique (-u) or
+	  --report-duplicate (-d, -D) options; so -c -u will only show the count
+	  of uniq files (which is all 1), -c -a will show count of all files, etc.
+
+
 0.130   2019-12-04  Released-By: PERLANCAR; Urgency: low
 
 	- No functional changes.
@@ -85,4 +111,3 @@
 0.01    2011-07-28  Released-By: SHARYANTO
 
         - First release.
-
