--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.137   2022-11-13  Released-By: PERLANCAR; Urgency: low
+
+        - No functional changes.
+
+        - [build] Rebuild to fix rendering of examples (bug in my toolchain).
+
+
 0.136   2022-11-13  Released-By: PERLANCAR; Urgency: medium
 
         - Add options: --include-file-patterns (-I),
