--- a/Changes
+++ b/Changes
@@ -1,3 +1,15 @@
+0.138   2022-11-14  Released-By: PERLANCAR; Urgency: low
+
+        - No functional changes.
+
+        - [doc] Give description to dupe-files.
+
+        - Fix example in Rinci metadata.
+
+        - [build] Rebuild with updated Getopt::Long::Util=0.899 to tweak
+          generated usage line in script POD.
+
+
 0.137   2022-11-13  Released-By: PERLANCAR; Urgency: low
 
         - No functional changes.
