--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.141   2023-02-06  Released-By: PERLANCAR; Urgency: medium
+
+        - No functional changes.
+
+        - [build] Rebuild to fix POD.
+
+
 0.140   2023-02-06  Released-By: PERLANCAR; Urgency: medium
 
         - Add algorithm 'name' to only compare by name.
