[dist] Edit Changes metadata (Backward-{Compatible,Incompatible})

--- a/Changes
+++ b/Changes
@@ -65,7 +65,7 @@
         - [build] Rebuild with updated tools for nicer POD.
 
 
-0.132   2020-06-01  Released-By: PERLANCAR; Urgency: medium; Backward-Compatible: no
+0.132   2020-06-01  Released-By: PERLANCAR; Urgency: medium; Backward-Incompatible: yes
 
 	- [incompatible change] For consistency, rename --count to --show-count.
 	  --count is still supported as alias; but if you use the function from
