--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.143   2024-12-05  Released-By: PERLANCAR; Urgency: medium
+
+        - Bump prereq version File::FindUniq 0.002.
+
+
 0.142   2024-12-05  Released-By: PERLANCAR; Urgency: medium
 
         - Split backend to File-FindUniq.
