--- a/Changes
+++ b/Changes
@@ -3,9 +3,18 @@
         - Bump prereq version File::FindUniq 0.002.
 
 
-0.142   2024-12-05  Released-By: PERLANCAR; Urgency: medium
+0.142.1 2024-12-05  Released-By: PERLANCAR; Urgency: medium
 
         - Split backend to File-FindUniq.
+
+        - UPDATE: Rename release 0.142 to 0.142.1 due to conflict.
+
+
+0.142   2023-06-26  Released-By: PERLANCAR; Urgency: low
+
+        - No functional changes.
+
+        - [dist] Edit Changes metadata (Backward-{Compatible,Incompatible}).
 
 
 0.141   2023-02-06  Released-By: PERLANCAR; Urgency: medium
